# AI-Generated-Reviews-Analysis

./: 2017-sample-long-cleaned.csv  2017-sample-long.csv  2023-sample-ai.csv  2023-sample-long-cleaned.csv  2023-sample-long.csv  2023-sample.csv  2023_ai_prob.csv  README.md  actual-sick-anal.ipynb  anal.py  clean.ipynb  clean.py  main.py  pyproject.toml  sample.ipynb  sample.py  split.py
misc/: count_words.py  fill-missing.py  radar-requirements.txt  test.py
