[project]
name = "amz-reviews"
version = "0.1.0"
description = ""
authors = [
    {name = "Michael Draga",email = "midall01.md@gmail.com"}
]
readme = "README.md"
requires-python = "3.10.0"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
